# PlaneMotion

./: AgentRead.md  MVVM_Architecture.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_ENGINE.md  REFACTORING_COMPLETE.md  engine.py  main.py  pyproject.toml  scene.json  theme.json
examples/: basic_usage.py  custom_component.py
lib/: __init__.py
lib/model/: __init__.py  component.py  connection.py
lib/utils/: __init__.py  save_load.py
lib/view/: __init__.py  plane_motion_view.py
lib/viewmodel/: __init__.py  plane_motion_viewmodel.py
planemotion/: __init__.py  theme.json
planemotion/components/: __init__.py  circle.py  rectangle.py  trapezoid.py
planemotion/core/: __init__.py  base_component.py  engine.py  menu_system.py  view.py  viewmodel.py
planemotion/impl/: __init__.py  default_engine.py  save_load.py
